# System-Integration

./: .gitignore
01_Data_Parsing/01_Javascript/: fileParser.js  package-lock.json  package.json
01_Data_Parsing/01_Javascript/files/: inglorious_bastards.csv  inglorious_bastards.json  inglorious_bastards.txt  inglorious_bastards.xml  inglorious_bastards.yaml
01_Data_Parsing/01_Python/: pyproject.toml
01_Data_Parsing/01_Python/data_parsing/: file_parser.py
01_Data_Parsing/01_Python/files/: pulp_fiction.csv  pulp_fiction.json  pulp_fiction.txt  pulp_fiction.xml  pulp_fiction.yaml
02_03_Data_Serving/02_Javascript/: index.js  package-lock.json  package.json
02_03_Data_Serving/02_Python/: main.py  multpart-form.html  pyproject.toml
04_Server_to_Client/04a_SSE/: package-lock.json  package.json
06_Websocket/: package-lock.json  package.json
08_WebRTC/: package-lock.json  package.json
08_WebRTC/src/: main.js
10_Databases/: migration_script.py  pyproject.toml
11_Auth_Payment/: package-lock.json
11_Auth_Payment/api/: index.js  package-lock.json  package.json
11_Auth_Payment/api/messages/: messages.router.js  payload.json
11_Auth_Payment/api/middleware/: auth0.middleware.js  error.middleware.js
12_Webhooks/12_Javascript_Receiver/: announcements.json  index.js  package-lock.json  package.json  releases.json  reservations.json
12_Webhooks/12_Python_Provider/: callback_reservation.json  callbacks_announcement.json  callbacks_release.json  main.py  pyproject.toml
13_GraphQL/: package-lock.json  package.json
13_GraphQL/src/: client.js  index.ts
(+1 files in other folders)
