[project]
name = "webhook-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Mejer96",email = "carlemilfalkmejer96@gmail.com"}
]
package-mode = false
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "requests (>=2.32.5,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
